knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Mapping_Condition_Group__c/pqcrush__Mapping_Condition_Group__c.object-meta.xml
<CustomObject>
    <label>Condition Group</label>
    <nameField>
        <displayFormat>MCG-{0000}</displayFormat>
        <label>Mapping Condition Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condition Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>