knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Mapping_Condition_Group__c/fields/pqcrush__Mapping__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Mapping__c</fullName>
    <label>Mapping</label>
    <referenceTo>pqcrush__Mapping__c</referenceTo>
    <relationshipLabel>Condition Groups</relationshipLabel>
    <relationshipName>Condition_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>