knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Mapping_Condition_Group__c/fields/pqcrush__Operator__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Operator__c</fullName>
    <description>Logical operator for conditions within the group. Valid values are &apos;AND&apos;, &apos;OR&apos;.</description>
    <label>Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>