knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Mapping_Condition_Group__c/fields/pqcrush__Parent_Condition_Group__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Parent_Condition_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Condition Group</label>
    <referenceTo>pqcrush__Mapping_Condition_Group__c</referenceTo>
    <relationshipLabel>Condition Groups</relationshipLabel>
    <relationshipName>Condition_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>